# aws-availability-tool

./: .env.example  .flake8  .gitignore  README.md  availability_checker.py  check_settings.py  export_terraform_json.py  pyproject.toml  requirements.txt  setup.py  terraform_availability_checker.py
config/: config.yaml  config.yaml.example
custom_output/: temp.html  terraform_plan.json
docs/: configuration.md
sample/environments/dev/: backend.tf  locals.tf  main.tf  variables.tf
sample/modules/alb/: main.tf  variables.tf
sample/modules/ec2/: variables.tf
sample/modules/rds/: outputs.tf
sample/modules/vpc/: main.tf  outputs.tf  security_groups.tf  variables.tf
sample/modules/waf/: main.tf  variables.tf
src/: cli.py
src/analysis/: analysis_parser.py  availability_checker.py  prompt_generator.py
src/client/: bedrock_client.py
src/config/: __init__.py  settings.py
src/reporting/: report_generator.py
src/terraform/: terraform_exporter.py
src/ui/: console_renderer.py
terraform_samples/serverless/environments/dev/: .terraform.lock.hcl  backend.tf  locals.tf  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
terraform_samples/serverless/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform_samples/serverless/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform_samples/serverless/modules/iam/: main.tf  outputs.tf  variables.tf
terraform_samples/serverless/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform_samples/serverless/modules/s3/: main.tf  outputs.tf  (+1 more)
terraform_samples/vpc-sample/: README.md
(+16 files in other folders)
